--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.makentoshe.androidgithubcitemplate">
+    package="com.megaprojectsuperpuper.thecode">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.TheCode">
+        <activity android:name=".Level22"></activity>
+        <activity android:name=".Level21" />
+        <activity
+            android:name=".MainActivityf"
+            android:label="@string/title_activity_main3"
+            android:theme="@style/Theme.TheCode.NoActionBar" />
+        <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
