--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level22"></activity>
-        <activity android:name=".Level21" />
-        <activity
-            android:name=".MainActivityf"
-            android:label="@string/title_activity_main3"
-            android:theme="@style/Theme.TheCode.NoActionBar" />
-        <activity android:name=".MainActivity2" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Level4"></activity>
+        <activity android:name=".Level3" />
+        <activity android:name=".Level2" />
+        <activity android:name=".Level1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
