--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level4"></activity>
+        <activity android:name=".Level6"></activity>
+        <activity android:name=".Level4" />
         <activity android:name=".Level3" />
         <activity android:name=".Level2" />
         <activity android:name=".Level1">
