--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.megaprojectsuperpuper.thecode">
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level7"></activity>
+        <activity android:name=".Level5"></activity>
+        <activity android:name=".Level7" />
         <activity android:name=".Level6" />
         <activity android:name=".Level4" />
         <activity android:name=".Level3" />
