--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level5"></activity>
+
+        <activity android:name=".Level10" ></activity>
+        <activity android:name=".Level9" />
+        <activity android:name=".Level8" />
+        <activity android:name=".Level5" />
         <activity android:name=".menu" />
         <activity android:name=".Level7" />
         <activity android:name=".Level6" />
         <activity android:name=".Level4" />
         <activity android:name=".Level3" />
         <activity android:name=".Level2" />
-        <activity android:name=".Level1">
+        <activity android:name=".Level1"/>
+        <activity android:name=".First_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
