--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.megaprojectsuperpuper.thecode">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
@@ -15,8 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level13"
-            android:screenOrientation="sensorPortrait"></activity>
+        <activity android:name=".Level15"></activity>
+        <activity android:name=".Level14" />
+        <activity
+            android:name=".Level13"
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".Level12"
             android:screenOrientation="sensorPortrait" />
