--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level15"
-            android:screenOrientation="sensorPortrait" ></activity>
-        <activity android:name=".Level14"
+        <activity android:name=".Level17"></activity>
+        <activity android:name=".Level16" />
+        <activity
+            android:name=".Level15"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".Level14"
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".Level13"
