--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheCode">
-        <activity android:name=".Level20"></activity>
-        <activity android:name=".Level19" />
+        <activity android:name=".Level20"
+            android:screenOrientation="sensorPortrait"></activity>
+        <activity android:name=".Level19"
+            android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".Level18"
             android:screenOrientation="sensorPortrait" />
